- Added: Bleeding edge HTML3 Technology to fortune cookie - Corrected: Link and logo information on blog_list and blog_detail pages - Corrected: scroll behavior on blog_list page to scroll to last post instead of the first - Changed: The display of the fortune cookie switch button

--- a/mainsite/static/mainsite/styles/smain.css
+++ b/mainsite/static/mainsite/styles/smain.css
@@ -1572,3 +1572,7 @@ p.projects {
 .fortuneTitle {
     text-decoration: underline;
 }
+
+.CTA {
+    color: red;
+}
